--- a/src/ForgotPassword/forgotPassword.css
+++ b/src/ForgotPassword/forgotPassword.css
@@ -2,9 +2,9 @@
     padding: 50px;
 }
 
-.paper {
+.forgotPasswordpaper {
     width: 600px !important ;
-    background-color: #00000040 !important;
+    background-color: white !important;
     border: solid 1px grey !important;
 }
 
