--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -4,7 +4,7 @@
 
 .paper {
     width: 600px !important ;
-    background-color: #00000040 !important;
+    background-color: white !important;
     border: solid 1px grey !important;
 }
 
