--- a/src/ResetPassword/resetPassword.css
+++ b/src/ResetPassword/resetPassword.css
@@ -2,9 +2,9 @@
     padding: 50px;
 }
 
-.paper {
+.resetPasswordpaper {
     width: 600px !important ;
-    background-color: #00000040 !important;
+    background-color: white !important;
     border: solid 1px grey !important;
 }
 
@@ -42,4 +42,8 @@
 
 .titleResetPassword {
     font-weight: bold !important;
+}
+
+.errorMessage {
+    background-color: #d32f2f;
 }
